--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rohith2931.github.io/majorproject",
+  "homepage": "https://msiiqbal.github.io/CredTracker ",
   "name": "majorproject",
   "version": "0.1.0",
   "private": true,
